quakewatch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quakewatch-ingress
  namespace: quakewatch
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: quakewatch.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: quakewatch-svc
            port:
              number: 5000
